squash bug where landscape wasn't updating

--- a/styles/index.css
+++ b/styles/index.css
@@ -90,7 +90,6 @@ LANDSCAPE
 }
 
 #landscape {
-    background: var(--morning);
     flex: 80;
     text-align: center;
 }
